ros_dev_ws/log/build_2021-03-11_16-48-52/lora/stderr.log
  File "/home/pop/Documents/wqdrone/ros_dev_ws/install/lora/lib/python3.8/site-packages/lora/lora_group.py", line 22
    def beginning_execution(self entity):
                                 ^
SyntaxError: invalid syntax

